--- a/bookdatabase/package.json
+++ b/bookdatabase/package.json
@@ -16,8 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.2",
-    "yarn": "^1.22.11"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
